fix: homepage credibility cleanup and remove walkthrough placeholders

--- a/index.html
+++ b/index.html
@@ -1521,19 +1521,25 @@
             <p class="overview-intro">A quick visual view of how Product Intelligence works.</p>
             <div class="overview-grid">
                 <div class="overview-card">
-                    <img src="assets/overview-steps.svg" alt="The 3-step flow showing how Product Intelligence works" onerror="this.onerror=null;this.style.display='none';">
+                    <a href="assets/overview-steps.svg" target="_blank" rel="noopener">
+                        <img src="assets/overview-steps.svg" alt="The 3-step flow showing how Product Intelligence works" onerror="this.onerror=null;this.style.display='none';">
+                    </a>
                     <div class="overview-caption">
                         <h3>The 3-step flow</h3>
                     </div>
                 </div>
                 <div class="overview-card">
-                    <img src="assets/overview-report.svg" alt="Example output report from Product Intelligence" onerror="this.onerror=null;this.style.display='none';">
+                    <a href="assets/overview-report.svg" target="_blank" rel="noopener">
+                        <img src="assets/overview-report.svg" alt="Example output report from Product Intelligence" onerror="this.onerror=null;this.style.display='none';">
+                    </a>
                     <div class="overview-caption">
                         <h3>Example output report</h3>
                     </div>
                 </div>
                 <div class="overview-card">
-                    <img src="assets/overview-users.svg" alt="Who it's for - Individuals, SMEs, and Sellers" onerror="this.onerror=null;this.style.display='none';">
+                    <a href="assets/overview-users.svg" target="_blank" rel="noopener">
+                        <img src="assets/overview-users.svg" alt="Who it's for - Individuals, SMEs, and Sellers" onerror="this.onerror=null;this.style.display='none';">
+                    </a>
                     <div class="overview-caption">
                         <h3>Who it's for (Individuals, SMEs, Sellers)</h3>
                     </div>
@@ -1542,22 +1548,17 @@
         </div>
     </section>
 
-    <!-- 60-second Walkthrough -->
+    <!-- Walkthrough Video (Coming Soon) -->
     <section class="walkthrough-section">
         <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">60-second walkthrough</h2>
-                <p class="section-subtitle">See the framework in action in under a minute.</p>
+            <div style="max-width: 600px; margin: 0 auto; background: var(--background); border: 1px solid var(--border); border-radius: var(--radius); padding: 48px 40px; text-align: center; box-shadow: var(--shadow-sm);">
+                <h2 style="font-size: 24px; font-weight: 600; color: var(--text-primary); margin-bottom: 16px;">Walkthrough video (coming soon)</h2>
+                <p style="font-size: 16px; color: var(--text-secondary); line-height: 1.6; margin-bottom: 32px;">A 60-second walkthrough video will be added after pilot feedback is collected.</p>
+                <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
+                    <a href="demo-product.html" class="btn btn-primary" style="padding: 14px 28px; border-radius: 50px;">See Demo Report</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDmWC8ZcaBcDlOpGR52KUW8C9nkYsQlLJJa0YlhWxnWZBaAw/viewform?usp=pp_url" class="btn btn-secondary" style="padding: 14px 28px; border-radius: 50px;" target="_blank" rel="noopener noreferrer">Join the Pilot</a>
+                </div>
             </div>
-            <div class="walkthrough-video-container">
-                <iframe 
-                    src="https://www.youtube.com/embed/VIDEO_ID_HERE" 
-                    title="60-second walkthrough of Product Intelligence"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    allowfullscreen>
-                </iframe>
-            </div>
-            <p class="walkthrough-note">Video shared for early validation purposes.</p>
         </div>
     </section>
 
@@ -1567,7 +1568,7 @@
             <div class="pilot-box">
                 <h2>Early Access Pilot – UK</h2>
                 <p><strong>Status: Early access expressions of interest open (UK).</strong></p>
-                <p>We are collecting expressions of interest to validate the framework with UK users and SMEs. This MVP is a static demonstration; pilots are conducted manually using the fixed template.</p>
+                <p>This MVP is a static demonstration of the framework. During validation, pilot evaluations are conducted manually using the fixed template.</p>
                 <p style="margin-bottom: 20px;"><strong>This pilot is for:</strong></p>
                 <ul class="pilot-list">
                     <li>Individuals making important product decisions</li>
@@ -1588,10 +1589,8 @@
             <div class="section-header">
                 <h2 class="section-title">Traction & Validation</h2>
             </div>
-            <p style="text-align: center; font-size: 16px; color: var(--text-secondary); margin-bottom: 24px; line-height: 1.6;">Validation metrics (registrations, conversations, LOIs) will be published as they are collected.</p>
-            <p style="text-align: center; font-size: 14px; color: var(--text-secondary); margin-bottom: 32px; line-height: 1.5;">Early visibility test: 90+ LinkedIn impressions (first post) — early signal only.</p>
+            <p style="text-align: center; font-size: 16px; color: var(--text-secondary); margin-bottom: 32px; line-height: 1.7; max-width: 700px; margin-left: auto; margin-right: auto;">Early signal: 90+ LinkedIn impressions (first post). Validation metrics (registrations, calls, LOIs) will be published once collected.</p>
             <p class="traction-founder">Founder: <a href="https://www.linkedin.com/in/chennakesava-rao-garlapati-31b504284" target="_blank" rel="noopener noreferrer">LinkedIn profile</a></p>
-            <p class="traction-credibility">Early users are helping validate the framework before automation is introduced.</p>
             <div class="traction-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDmWC8ZcaBcDlOpGR52KUW8C9nkYsQlLJJa0YlhWxnWZBaAw/viewform?usp=pp_url" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Join the Pilot (Google Form)</a>
                 <a href="b2b-pilot.html" class="btn btn-secondary">Request a B2B Pilot / LOI</a>
@@ -1606,8 +1605,7 @@
                 <h2 class="section-title">Early Feedback</h2>
             </div>
             <div style="max-width: 700px; margin: 0 auto; text-align: center;">
-                <h3 style="font-size: 20px; font-weight: 600; margin-bottom: 16px; color: var(--text-primary);">Early feedback (in progress)</h3>
-                <p style="font-size: 16px; color: var(--text-secondary); line-height: 1.6;">Pilot feedback quotes will be added once collected. We will not publish participant feedback without permission.</p>
+                <p style="font-size: 16px; color: var(--text-secondary); line-height: 1.7;">Pilot feedback quotes will be added once collected and with permission. No testimonials are published without consent.</p>
             </div>
         </div>
     </section>
