ui: unify theme, fix layout, remove video section

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
             }
         }
     </style>
-  <link rel="stylesheet" href="assets/css/theme.css?v=1">
+  <link rel="stylesheet" href="assets/css/theme.css?v=3">
 </head>
 <body>
 
@@ -1306,7 +1306,7 @@
             <div class="section-header">
                 <h2 class="section-title">Why Product Intelligence is different</h2>
             </div>
-            <div class="why-different-grid">
+            <div class="grid-4">
                 <div class="why-different-card">
                     <span class="card-label">A) Innovation</span>
                     <h3>A repeatable decision template</h3>
@@ -1624,6 +1624,7 @@
                 <div>
                     <p>&copy; 2025 Product Intelligence. All rights reserved.</p>
                     <p style="margin-top: 12px; font-size: 13px; color: rgba(255,255,255,0.6);">We only collect pilot registration details to contact you about the pilot. No payment required.</p>
+                    <p class="footer-repo"><a href="https://github.com/Kesava1642/product-intelligence-mvp" target="_blank" rel="noopener noreferrer">Repository / README →</a></p>
                 </div>
                 <div class="footer-social">
                     <a href="https://www.linkedin.com/in/chennakesava-rao-garlapati-31b504284" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">in</a>
