--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -53,7 +53,7 @@
         }
 
         /* Header */
-        .header {
+        .site-header {
             position: fixed;
             top: 0;
             left: 0;
@@ -71,7 +71,7 @@
             height: 72px;
         }
 
-        .logo {
+        .brand {
             display: flex;
             align-items: center;
             gap: 10px;
@@ -93,19 +93,20 @@
             font-size: 18px;
         }
 
-        .nav {
+        .site-nav {
             display: flex;
             align-items: center;
             gap: 32px;
         }
 
-        .nav-links {
+        .site-nav .nav-links {
             display: flex;
             gap: 32px;
             list-style: none;
+            white-space: nowrap;
         }
 
-        .nav-links a {
+        .site-nav .nav-links a {
             text-decoration: none;
             color: var(--text-secondary);
             font-weight: 500;
@@ -113,11 +114,11 @@
             transition: color var(--transition);
         }
 
-        .nav-links a:hover {
+        .site-nav .nav-links a:hover {
             color: var(--primary);
         }
 
-        .nav-cta {
+        .header-cta {
             display: flex;
             gap: 12px;
         }
@@ -1174,8 +1175,8 @@
                 height: 64px;
             }
 
-            .nav-links,
-            .nav-cta {
+            .site-nav .nav-links,
+            .header-cta {
                 display: none;
             }
 
@@ -1248,20 +1249,20 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+    <header class="site-header">
         <div class="container header-inner">
-            <a href="#" class="logo">
+            <a href="index.html" class="brand">
                 <div class="logo-icon">PI</div>
                 <span>Product Intelligence</span>
             </a>
-            <nav class="nav">
+            <nav class="site-nav">
                 <ul class="nav-links">
                     <li><a href="use-cases.html">Use Cases</a></li>
                     <li><a href="why-not-ai.html">Why Us</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
+                    <li><a href="index.html#how-it-works">How It Works</a></li>
                     <li><a href="b2b-pilot.html">B2B Pilot</a></li>
                 </ul>
-                <div class="nav-cta">
+                <div class="header-cta">
                     <a href="product-template.html" class="btn btn-secondary">View Framework</a>
                     <a href="demo-product.html" class="btn btn-primary">See Demo Report</a>
                 </div>
