--- a/modes.html
+++ b/modes.html
@@ -50,55 +50,137 @@
         }
 
         /* Header */
-        .page-header {
-            background: var(--background);
+        .site-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(255,255,255,0.95);
+            backdrop-filter: blur(10px);
             border-bottom: 1px solid var(--border);
-            padding: 24px 0;
+            z-index: 1000;
         }
 
         .header-inner {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 24px;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            height: 72px;
         }
 
-        .logo {
+        .brand {
             display: flex;
             align-items: center;
             gap: 10px;
             text-decoration: none;
             color: var(--text-primary);
             font-weight: 700;
-            font-size: 18px;
+            font-size: 20px;
         }
 
         .logo-icon {
-            width: 32px;
-            height: 32px;
+            width: 36px;
+            height: 36px;
             background: var(--primary);
-            border-radius: 6px;
+            border-radius: var(--radius-sm);
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
-            font-size: 14px;
-            font-weight: 700;
+            font-size: 18px;
         }
 
-        .back-link {
-            font-size: 14px;
-            color: var(--text-secondary);
+        .site-nav {
+            display: flex;
+            align-items: center;
+            gap: 32px;
+        }
+
+        .site-nav .nav-links {
+            display: flex;
+            gap: 32px;
+            list-style: none;
+            white-space: nowrap;
+        }
+
+        .site-nav .nav-links a {
             text-decoration: none;
+            color: var(--text-secondary);
+            font-weight: 500;
+            font-size: 15px;
             transition: color var(--transition);
         }
 
-        .back-link:hover {
+        .site-nav .nav-links a:hover,
+        .site-nav .nav-links a.active {
             color: var(--primary);
+        }
+
+        .header-cta {
+            display: flex;
+            gap: 12px;
+        }
+
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 12px 24px;
+            font-size: 15px;
+            font-weight: 600;
+            border-radius: var(--radius-sm);
+            text-decoration: none;
+            transition: all var(--transition);
+            cursor: pointer;
+            border: none;
+            font-family: inherit;
+        }
+
+        .btn-primary {
+            background: var(--primary);
+            color: white;
+        }
+
+        .btn-primary:hover {
+            background: var(--primary-dark);
+            transform: translateY(-1px);
+            box-shadow: var(--shadow);
+        }
+
+        .btn-secondary {
+            background: transparent;
+            color: var(--text-secondary);
+            border: 1px solid var(--border);
+        }
+
+        .btn-secondary:hover {
+            background: var(--background-alt);
+            color: var(--text-primary);
+        }
+
+        .mobile-toggle {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 4px;
+        }
+
+        .mobile-toggle span {
+            width: 24px;
+            height: 2px;
+            background: var(--text-primary);
+            border-radius: 2px;
         }
 
         /* Hero */
         .hero {
-            padding: 80px 0 60px;
+            padding: 160px 0 60px;
             text-align: center;
             border-bottom: 1px solid var(--border);
         }
@@ -320,8 +402,21 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .header-inner {
+                height: 64px;
+            }
+
+            .site-nav .nav-links,
+            .header-cta {
+                display: none;
+            }
+
+            .mobile-toggle {
+                display: flex;
+            }
+
             .hero {
-                padding: 60px 0 48px;
+                padding: 120px 0 48px;
             }
 
             .content {
@@ -353,15 +448,29 @@
 <body>
 
     <!-- Header -->
-    <header class="page-header">
-        <div class="container">
-            <div class="header-inner">
-                <a href="index.html" class="logo">
-                    <div class="logo-icon">PI</div>
-                    <span>Product Intelligence</span>
-                </a>
-                <a href="index.html" class="back-link">← Back to Home</a>
-            </div>
+    <header class="site-header">
+        <div class="header-inner">
+            <a href="index.html" class="brand">
+                <div class="logo-icon">PI</div>
+                <span>Product Intelligence</span>
+            </a>
+            <nav class="site-nav">
+                <ul class="nav-links">
+                    <li><a href="use-cases.html">Use Cases</a></li>
+                    <li><a href="why-not-ai.html">Why Us</a></li>
+                    <li><a href="index.html#how-it-works">How It Works</a></li>
+                    <li><a href="b2b-pilot.html">B2B Pilot</a></li>
+                </ul>
+                <div class="header-cta">
+                    <a href="product-template.html" class="btn btn-secondary">View Framework</a>
+                    <a href="demo-product.html" class="btn btn-primary">See Demo Report</a>
+                </div>
+            </nav>
+            <button class="mobile-toggle" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
