ui: align MVP banner with container and reduce visual dominance

--- a/index.html
+++ b/index.html
@@ -1048,25 +1048,6 @@
             border-radius: 2px;
         }
 
-        /* MVP Banner */
-        .mvp-banner {
-            background: #fef3c7;
-            border-bottom: 1px solid #fcd34d;
-            padding: 12px 0;
-            text-align: center;
-        }
-
-        .mvp-banner p {
-            font-size: 14px;
-            color: #92400e;
-            font-weight: 500;
-        }
-
-        .mvp-banner a {
-            color: #92400e;
-            text-decoration: underline;
-        }
-
         /* Decision Journey */
         .journey {
             padding: 100px 0;
@@ -1278,10 +1259,12 @@
     <main class="page">
 
     <!-- MVP Status Banner -->
-    <div class="mvp-banner" style="margin-top: 72px;">
-        <div class="container">
-            <p>📋 <strong>MVP Proof-of-Concept</strong> — This is a static demonstration of the Product Intelligence decision framework. No automation, AI processing, or live data is currently active. <a href="product-template.html">Learn more →</a></p>
-        </div>
+    <div class="mvp-banner">
+      <div class="mvp-banner-inner">
+        <span class="mvp-badge">MVP</span>
+        Proof-of-Concept — This is a static demonstration of the Product Intelligence decision framework. No automation, AI processing, or live data is currently active.
+        <a href="product-template.html">Learn more →</a>
+      </div>
     </div>
 
     <!-- Hero Section -->
