--- a/why-not-ai.html
+++ b/why-not-ai.html
@@ -181,21 +181,6 @@
             border-radius: 2px;
         }
 
-        /* MVP Banner */
-        .mvp-banner {
-            background: #fef3c7;
-            border-bottom: 1px solid #fcd34d;
-            padding: 12px 0;
-            text-align: center;
-        }
-
-        .mvp-banner p {
-            font-size: 14px;
-            color: #92400e;
-            font-weight: 500;
-            margin: 0;
-        }
-
         /* Hero */
         .hero {
             padding: 160px 0 60px;
@@ -498,9 +483,10 @@
 
     <!-- MVP Banner -->
     <div class="mvp-banner">
-        <div class="container">
-            <p>📋 <strong>MVP Proof-of-Concept</strong> — This page explains the innovation behind the Product Intelligence framework.</p>
-        </div>
+      <div class="mvp-banner-inner">
+        <span class="mvp-badge">MVP</span>
+        Proof-of-Concept — This page explains the innovation behind the Product Intelligence framework.
+      </div>
     </div>
 
     <!-- Hero -->
