copy: add concrete example to homepage hero

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -207,9 +207,16 @@
             font-size: clamp(17px, 2vw, 20px);
             color: var(--text-secondary);
             max-width: 580px;
-            margin: 0 auto 48px;
+            margin: 0 auto 20px;
             line-height: 1.6;
             font-weight: 400;
+        }
+
+        .hero-example {
+            font-size: 14px;
+            color: var(--text-muted);
+            margin: 0 auto 40px;
+            font-style: italic;
         }
 
         .hero-cta {
@@ -1276,6 +1283,7 @@
                     A structured decision framework that helps individuals, businesses, and sellers 
                     understand any product — its suitability, risks, and alternatives — before committing.
                 </p>
+                <p class="hero-example">Example: Should a small business invest £12,000 in a forklift — or rent instead?</p>
                 <div class="hero-cta">
                     <a href="demo-product.html" class="btn btn-primary">See a Demo Report</a>
                     <a href="#decision-journey" class="btn btn-secondary">How It Works</a>
