copy: make use cases outcome-driven and endorsement-ready

--- a/use-cases.html
+++ b/use-cases.html
@@ -438,10 +438,11 @@
     </header>
 
     <!-- MVP Banner -->
-    <div style="background: #fef3c7; border-bottom: 1px solid #fcd34d; padding: 12px 0; text-align: center; margin-top: 72px;">
-        <div class="container">
-            <p style="font-size: 14px; color: #92400e; font-weight: 500; margin: 0;">📋 <strong>MVP Proof-of-Concept</strong> — This page demonstrates how Product Intelligence serves different user types.</p>
-        </div>
+    <div class="mvp-banner" style="margin-top: 72px;">
+      <div class="mvp-banner-inner">
+        <span class="mvp-badge">MVP</span>
+        Proof-of-Concept — This page demonstrates how Product Intelligence serves different user types.
+      </div>
     </div>
 
     <!-- Page Header -->
@@ -458,18 +459,15 @@
             <div class="use-case-header">
                 <span class="use-case-label">Use Case 1</span>
                 <h2 class="use-case-title">For Individuals</h2>
-                <p class="use-case-subtitle">Buy the right product with confidence.</p>
+                <p class="use-case-subtitle">Decision: Choosing a product for personal or household use.</p>
             </div>
             <div class="use-case-content">
                 <ul class="use-case-list">
-                    <li>Understand what a product actually is</li>
-                    <li>Know who it is useful for and not useful for</li>
-                    <li>Compare options without reading hundreds of reviews</li>
-                    <li>Get a clear recommendation based on needs and budget</li>
-                    <li>See trusted places to buy the product</li>
+                    <li><strong>Without PI:</strong> Risk of buying the wrong product, overspending on features you don't need, or missing better alternatives buried in reviews.</li>
+                    <li><strong>With PI:</strong> Clear suitability assessment before purchase — understand what fits your needs, budget, and situation without hours of research.</li>
                 </ul>
                 <div class="use-case-outcome">
-                    <p>Individuals make faster, smarter purchase decisions with less confusion.</p>
+                    <p>Fewer regrets. Less time wasted. Confidence that you chose the right product.</p>
                 </div>
             </div>
         </div>
@@ -481,18 +479,15 @@
             <div class="use-case-header">
                 <span class="use-case-label">Use Case 2</span>
                 <h2 class="use-case-title">For Businesses & Industry</h2>
-                <p class="use-case-subtitle">Make structured, risk-aware product decisions.</p>
+                <p class="use-case-subtitle">Decision: Evaluating equipment, tools, or supplies for operational use.</p>
             </div>
             <div class="use-case-content">
                 <ul class="use-case-list">
-                    <li>Structured product evaluation for business use</li>
-                    <li>Understand cost vs value before purchasing</li>
-                    <li>Compare suppliers, types, and long-term suitability</li>
-                    <li>Identify risks and limitations early</li>
-                    <li>Support procurement and operational decisions</li>
+                    <li><strong>Without PI:</strong> Risk of procurement delays, choosing unsuitable equipment, or discovering critical limitations after the purchase order is raised.</li>
+                    <li><strong>With PI:</strong> Structured evaluation covering cost, suitability, compliance, and long-term fit — completed before sign-off, not after.</li>
                 </ul>
                 <div class="use-case-outcome">
-                    <p>Businesses reduce risk, save time, and make confident purchasing decisions.</p>
+                    <p>Fewer costly mistakes. Clearer audit trails. Procurement decisions backed by structured evidence.</p>
                 </div>
             </div>
         </div>
@@ -504,19 +499,15 @@
             <div class="use-case-header">
                 <span class="use-case-label">Use Case 3</span>
                 <h2 class="use-case-title">For E-commerce & Sellers</h2>
-                <p class="use-case-subtitle">Choose profitable products and describe them clearly.</p>
+                <p class="use-case-subtitle">Decision: Choosing which products to source, stock, or list.</p>
             </div>
             <div class="use-case-content">
                 <ul class="use-case-list">
-                    <li>Decide whether a product is worth selling</li>
-                    <li>Understand demand, competition, and variants</li>
-                    <li>Identify who the product is best suited for</li>
-                    <li>Generate clear, honest product descriptions</li>
-                    <li>Compare products before adding them to a store</li>
-                    <li>Access sourcing and buying links</li>
+                    <li><strong>Without PI:</strong> Risk of stocking slow-moving inventory, poor supplier choices, or writing product descriptions that mislead buyers and increase returns.</li>
+                    <li><strong>With PI:</strong> Clear product-market fit analysis — understand who buys it, why they buy it, and whether it's worth adding to your catalogue.</li>
                 </ul>
                 <div class="use-case-outcome">
-                    <p>Sellers choose better products, reduce mistakes, and build trust with buyers.</p>
+                    <p>Smarter sourcing. Honest descriptions. Products that sell — and stay sold.</p>
                 </div>
             </div>
         </div>
