copy: strengthen Why Us tone and add honest fit guidance

--- a/why-not-ai.html
+++ b/why-not-ai.html
@@ -505,7 +505,7 @@
             <section class="section">
                 <h2 class="section-title">Core principle: structure before automation</h2>
                 <p class="section-text">
-                    The innovation is the repeatable framework. Automation will be added only to scale delivery.
+                    The value is in the repeatable framework — not the technology behind it. Automation scales delivery; structure ensures quality.
                 </p>
             </section>
 
@@ -513,7 +513,7 @@
             <section class="section">
                 <h2 class="section-title">The Problem with Existing Tools</h2>
                 <p class="section-text">
-                    When people need to understand a product before buying, selling, or sourcing, they typically turn to search engines, review sites, or AI chatbots. But each of these has significant limitations.
+                    When evaluating a product before buying, selling, or sourcing, most people turn to search engines, review sites, or AI chatbots. Each has limitations that structured evaluation addresses.
                 </p>
 
                 <div class="alt-card">
@@ -616,32 +616,48 @@
             <section class="section">
                 <h2 class="section-title">The Innovation: A Decision Framework</h2>
                 <p class="section-text">
-                    Product Intelligence is not just another search tool or AI wrapper. It's a <strong>structured decision framework</strong> that applies the same rigorous evaluation process to every product.
+                    Product Intelligence is a <strong>structured decision framework</strong> that applies consistent evaluation to every product — not a search tool or AI wrapper.
                 </p>
                 <ul class="bullet-list">
-                    <li><strong>Auditability</strong> — Every report follows the same structure. Users can see exactly how conclusions were reached.</li>
-                    <li><strong>Repeatability</strong> — The same product evaluated twice produces the same output. This enables trust and comparison.</li>
-                    <li><strong>Suitability Focus</strong> — Rather than just listing features, reports assess who the product is suitable for — and who should avoid it.</li>
-                    <li><strong>Context Modes</strong> — The same product can be viewed from different perspectives: individual buyer, business procurer, or seller.</li>
-                    <li><strong>Risk Awareness</strong> — Limitations, misuse risks, and red flags are surfaced explicitly, not buried in reviews.</li>
+                    <li><strong>Auditability</strong> — Every report follows the same structure. Users can trace how conclusions were reached.</li>
+                    <li><strong>Repeatability</strong> — The same product evaluated twice produces the same output, enabling comparison and trust.</li>
+                    <li><strong>Suitability Focus</strong> — Reports assess who the product is suitable for — and who should avoid it.</li>
+                    <li><strong>Context Modes</strong> — The same product viewed from different perspectives: buyer, business procurer, or seller.</li>
+                    <li><strong>Risk Awareness</strong> — Limitations and red flags are surfaced explicitly, not buried in reviews.</li>
                 </ul>
 
                 <div class="highlight-box">
                     <h4>Why This Matters</h4>
-                    <p>In a world of information overload and AI-generated noise, structured decision frameworks become more valuable, not less. Product Intelligence provides the consistency and transparency that existing tools lack — enabling better decisions at scale.</p>
+                    <p>In a landscape of information overload and AI-generated noise, structured frameworks become more valuable — not less. Product Intelligence offers consistency and transparency where existing tools fall short.</p>
                 </div>
+            </section>
+
+            <!-- When PI is Right -->
+            <section class="section">
+                <h2 class="section-title">When Product Intelligence is the right tool — and when it isn't</h2>
+                <p class="section-text"><strong>Best for:</strong></p>
+                <ul class="bullet-list">
+                    <li>Evaluating equipment, tools, or supplies before a procurement decision</li>
+                    <li>Understanding product suitability, risks, and alternatives in a structured format</li>
+                    <li>Providing audit-ready documentation for business or operational purchases</li>
+                </ul>
+                <p class="section-text" style="margin-top: 24px;"><strong>Not ideal for:</strong></p>
+                <ul class="bullet-list">
+                    <li>Impulse purchases or low-value items where quick reviews suffice</li>
+                    <li>Highly specialised or niche products outside common business categories</li>
+                </ul>
             </section>
 
             <!-- How We Reduce AI Risk -->
             <section class="section">
                 <h2 class="section-title">How we reduce AI risk (future)</h2>
                 <p class="section-text">
-                    When automation is introduced, the framework will maintain its structured, auditable nature through:
+                    When automation is introduced, the framework maintains its structured, auditable nature through:
                 </p>
                 <ul class="bullet-list">
-                    <li><strong>Evidence-first outputs with sources</strong> — All claims will be backed by cited sources, enabling verification and fact-checking.</li>
-                    <li><strong>Deterministic template + fixed sections</strong> — The 9-section framework remains fixed, ensuring consistent structure regardless of automation method.</li>
-                    <li><strong>Human review and audit trail for business decisions</strong> — Critical evaluations will include human oversight, with full audit trails showing how conclusions were reached.</li>
+                    <li><strong>Evidence-first outputs</strong> — Claims backed by cited sources, enabling verification.</li>
+                    <li><strong>Fixed template structure</strong> — The 9-section framework remains consistent regardless of automation method.</li>
+                    <li><strong>Human review for business decisions</strong> — Critical evaluations include human oversight with full audit trails.</li>
                 </ul>
             </section>
 
@@ -649,7 +665,7 @@
             <section class="section">
                 <h2 class="section-title">Future Direction</h2>
                 <p class="section-text">
-                    The current MVP demonstrates the framework using static HTML reports. Future versions will introduce:
+                    The current MVP demonstrates the framework using static reports. Future versions will introduce:
                 </p>
                 <ul class="bullet-list">
                     <li>Automated report generation using structured data and controlled AI assistance</li>
@@ -658,7 +674,7 @@
                     <li>API access for B2B applications</li>
                 </ul>
                 <p class="section-text">
-                    However, the core innovation — the structured, auditable decision framework — remains constant. Technology is a means to deliver the framework at scale, not a replacement for it.
+                    The core innovation — the structured, auditable framework — remains constant. Technology scales delivery; the framework ensures quality.
                 </p>
             </section>
 
