copy: reframe monetisation as indicative post-validation pricing

--- a/monetisation.html
+++ b/monetisation.html
@@ -497,23 +497,30 @@
     </header>
 
     <!-- MVP Banner -->
-    <div style="background: #fef3c7; border-bottom: 1px solid #fcd34d; padding: 12px 0; text-align: center;">
-        <div class="container">
-            <p style="font-size: 14px; color: #92400e; font-weight: 500; margin: 0;">📋 <strong>MVP Proof-of-Concept</strong> — No payments or affiliate links are active. This demonstrates commercial viability.</p>
-        </div>
+    <div class="mvp-banner">
+      <div class="mvp-banner-inner">
+        <span class="mvp-badge">MVP</span>
+        Proof-of-Concept — No payments or affiliate links are active. This demonstrates commercial viability.
+      </div>
     </div>
 
     <!-- Hero -->
     <section class="hero">
         <div class="container">
             <h1>Monetisation & Revenue Model</h1>
-            <p>How Product Intelligence creates sustainable value and revenue.</p>
+            <p>How Product Intelligence plans to create sustainable value and revenue.</p>
         </div>
     </section>
 
     <!-- Content -->
     <main class="content">
         <div class="container">
+
+            <!-- Indicative Pricing Note -->
+            <div class="note-box" style="margin-bottom: 40px;">
+                <h4>Indicative Pricing (Post-Validation)</h4>
+                <p>Pricing will be confirmed after the UK pilot phase based on measured value and customer feedback.</p>
+            </div>
 
             <!-- Who Pays -->
             <section class="section">
@@ -538,7 +545,7 @@
                     <strong>The Value:</strong> Product Intelligence provides structured, auditable reports that answer the key questions: What is this product? Who is it for? What are the risks? Should I buy, sell, or pass? This saves time, reduces mistakes, and builds confidence in decisions.
                 </p>
                 <p class="section-text">
-                    Users pay because the cost of a subscription is far less than the cost of a bad purchase, wasted time, or lost opportunity.
+                    Users are expected to pay because the cost of a subscription is far less than the cost of a bad purchase, wasted time, or lost opportunity.
                 </p>
             </section>
 
@@ -611,7 +618,7 @@
                     <span class="revenue-label">Stream A</span>
                     <h3 class="revenue-title">Affiliate & Referral Links</h3>
                     <p class="revenue-text">
-                        Commission from trusted product suppliers when users purchase through recommended links. Only for products with clear, honest recommendations. Affiliate status is always disclosed.
+                        Planned commission from trusted product suppliers when users purchase through recommended links. Only for products with clear, honest recommendations. Affiliate status will always be disclosed.
                     </p>
                 </div>
 
@@ -619,7 +626,7 @@
                     <span class="revenue-label">Stream B</span>
                     <h3 class="revenue-title">Enterprise & Custom Reports</h3>
                     <p class="revenue-text">
-                        Custom product intelligence reports for large organisations. Integration with procurement workflows and decision systems. Priced per engagement or annual contract.
+                        Planned custom product intelligence reports for large organisations. Integration with procurement workflows and decision systems. Expected to be priced per engagement or annual contract.
                     </p>
                 </div>
             </section>
@@ -663,7 +670,7 @@
                 <div class="note-box">
                     <h4>Current Status</h4>
                     <p>
-                        No payments are implemented in the current MVP. No live affiliate links are active. This page demonstrates commercial intent and viability for investor and visa assessment purposes. It outlines how Product Intelligence will generate revenue once the product is operational.
+                        No payments are implemented in the current MVP. No live affiliate links are active. This page demonstrates commercial intent and viability for investor and visa assessment purposes. It outlines how Product Intelligence expects to generate revenue once the product is operational.
                     </p>
                 </div>
             </section>
